[package]
name = "kmbox"
version = "0.1.3"
edition = "2021"
authors = ["Stipulations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Stipulations/kmbox"
description = "a crate that will help with interaction of kmbox hid devices"

[dependencies]
serialport = "4.5.0"
colored = "2.1.0"